fix(checkbox): add in hight contrast the color activeText

--- a/packages/components/src/checkbox/Checkbox.module.css
+++ b/packages/components/src/checkbox/Checkbox.module.css
@@ -123,6 +123,10 @@
     border: none;
     background: --field-disabled;
   }
+
+  @media (forced-colors: active) {
+    color: activeText;
+  }
 }
 
 .checkboxGroup {
